<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/title"
    />

	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/up_throughput"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/up_throughput_text" android:text="@string/default_throughput"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/down_throughput"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/down_throughput_text" android:text="@string/default_throughput"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView android:text="@string/both_throughput" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/both_throughput_text" android:text="@string/default_throughput"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView android:text="@string/latency_avg" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/latency_avg_text" android:text="@string/default_latency_avg"></TextView>
	</LinearLayout>
	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView android:text="@string/latency_error" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/latency_error_text" android:text="@string/default_latency_error"></TextView>
	</LinearLayout>
	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/latency_histogram_text" android:text="@string/default_latency_histogram"></TextView>
</LinearLayout>
